# grrr

./: .env  .env.example  Cargo.toml  rclone.conf.example
bot/: .env.example  .gitignore  Cargo.toml
bot/src/: db.rs  helpers.rs  main.rs  queue_entry.rs  reactions.rs  uploader.rs
bot/src/commands/: configurator.rs
bot/src/configurator/: config.rs  gdrive.rs  mod.rs
bot/src/handlers/: cache_ready.rs  guild_create.rs  message.rs  mod.rs
src/: db.rs  helpers.rs  main.rs  mini_attachment.rs  processing_queue.rs  queue_entry.rs  reactions.rs  uploader.rs
src/handlers/: cache_ready.rs  message.rs  mod.rs
src/upload/: client.rs
webapi/: .editorconfig  .gitignore  composer.json  env.php.example
webapi/config/: local.php  prod.php
webapi/public/: index.php
webapi/src/: ErrorHandler.php  Functional.php  ProductionErrorHandler.php
webapi/src/Controllers/: ConfigureController.php  DefaultController.php
webapi/src/Core/: Env.php  EnvFileMissingException.php  Rclone.php
webapi/src/Guards/: AccessDeniedException.php  Guard.php  StatelessTokenGuard.php
webspa/: nuxt.config.js  package.json
webspa/layouts/: default.vue
