[package]
name = "grrr"
version = "0.1.0"
authors = ["cvgore <@cvgo.re>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
rocksdb = "0.15.0"
reqwest = "0.11.0"
serde = "1.0.123"
serde_json = "1.0.62"

[dependencies.tokio]
version = "1.2.0"
features = ["macros", "rt-multi-thread", "signal", "process"]

[dependencies.serenity]
version = "0.10.2"
features = ["framework", "standard_framework", "builder", "client", "gateway", "rustls_backend", "model"]
